--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"web": "expo start --web"
 	},
 	"dependencies": {
+		"@react-navigation/drawer": "^7.3.2",
 		"@react-navigation/native": "^7.0.19",
 		"@react-navigation/native-stack": "^7.3.3",
 		"expo": "~52.0.40",
@@ -16,6 +17,8 @@
 		"expo-status-bar": "~2.0.1",
 		"react": "18.3.1",
 		"react-native": "0.76.7",
+		"react-native-gesture-handler": "^2.24.0",
+		"react-native-reanimated": "~3.16.1",
 		"react-native-safe-area-context": "^5.3.0",
 		"react-native-screens": "^4.10.0"
 	},
