update readme tasks and app name

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "fesa-grade-calculator",
-    "slug": "fesa-grade-calculator",
+    "name": "fesa-coffee-shop",
+    "slug": "fesa-coffee-shop",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
